--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\alexa\\AppData\\Roaming\\NetBeans\\24\\config\\GlassFishEE6\\Properties\\gfv3-1858890109.properties
+deploy.ant.properties.file=C:\\Users\\gabri\\AppData\\Roaming\\NetBeans\\24\\config\\GlassFishEE6\\Properties\\gfv3-522614409.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/alexa/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/alexa/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\alexa\\GlassFish_Server\\glassfish;C:\\Users\\alexa\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv800ee11:localhost:4848
-j2ee.server.middleware=C:/Users/alexa/GlassFish_Server
-user.properties.file=C:\\Users\\alexa\\AppData\\Roaming\\NetBeans\\24\\build.properties
+j2ee.server.domain=C:/Users/gabri/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/gabri/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\gabri\\GlassFish_Server\\glassfish;C:\\Users\\gabri\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv800ee11:localhost:4848
+j2ee.server.middleware=C:/Users/gabri/GlassFish_Server
+user.properties.file=C:\\Users\\gabri\\AppData\\Roaming\\NetBeans\\24\\build.properties
