--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,8 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.jbcrypt-0.4.jar=lib\\jbcrypt-0.4.jar
+file.reference.json-20250517.jar=lib\\json-20250517.jar
 file.reference.mysql-connector-j-9.3.0.jar=lib\\mysql-connector-j-9.3.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,7 +43,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv800ee11
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.jbcrypt-0.4.jar}:\
+    ${file.reference.json-20250517.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
