--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,5 @@ j2ee.server.domain=C:/Users/alexa/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/alexa/GlassFish_Server/glassfish
 j2ee.server.instance=[C:\\Users\\alexa\\GlassFish_Server\\glassfish;C:\\Users\\alexa\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv800ee11:localhost:4848
 j2ee.server.middleware=C:/Users/alexa/GlassFish_Server
+selected.browser=default
 user.properties.file=C:\\Users\\alexa\\AppData\\Roaming\\NetBeans\\24\\build.properties
