--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,9 +26,35 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.barcodes-7.1.3-javadoc.jar=lib\\barcodes-7.1.3-javadoc.jar
+file.reference.barcodes-7.1.3-sources.jar=lib\\barcodes-7.1.3-sources.jar
+file.reference.barcodes-7.1.3.jar=lib\\barcodes-7.1.3.jar
+file.reference.font-asian-7.1.3.jar=lib\\font-asian-7.1.3.jar
+file.reference.forms-7.1.3-javadoc.jar=lib\\forms-7.1.3-javadoc.jar
+file.reference.forms-7.1.3-sources.jar=lib\\forms-7.1.3-sources.jar
+file.reference.forms-7.1.3.jar=lib\\forms-7.1.3.jar
+file.reference.hyph-7.1.3.jar=lib\\hyph-7.1.3.jar
+file.reference.io-7.1.3-javadoc.jar=lib\\io-7.1.3-javadoc.jar
+file.reference.io-7.1.3-sources.jar=lib\\io-7.1.3-sources.jar
+file.reference.io-7.1.3.jar=lib\\io-7.1.3.jar
 file.reference.jbcrypt-0.4.jar=lib\\jbcrypt-0.4.jar
 file.reference.json-20250517.jar=lib\\json-20250517.jar
+file.reference.kernel-7.1.3-javadoc.jar=lib\\kernel-7.1.3-javadoc.jar
+file.reference.kernel-7.1.3-sources.jar=lib\\kernel-7.1.3-sources.jar
+file.reference.kernel-7.1.3.jar=lib\\kernel-7.1.3.jar
+file.reference.layout-7.1.3-javadoc.jar=lib\\layout-7.1.3-javadoc.jar
+file.reference.layout-7.1.3-sources.jar=lib\\layout-7.1.3-sources.jar
+file.reference.layout-7.1.3.jar=lib\\layout-7.1.3.jar
 file.reference.mysql-connector-j-9.3.0.jar=lib\\mysql-connector-j-9.3.0.jar
+file.reference.pdfa-7.1.3-javadoc.jar=lib\\pdfa-7.1.3-javadoc.jar
+file.reference.pdfa-7.1.3-sources.jar=lib\\pdfa-7.1.3-sources.jar
+file.reference.pdfa-7.1.3.jar=lib\\pdfa-7.1.3.jar
+file.reference.pdftest-7.1.3-javadoc.jar=lib\\pdftest-7.1.3-javadoc.jar
+file.reference.pdftest-7.1.3-sources.jar=lib\\pdftest-7.1.3-sources.jar
+file.reference.pdftest-7.1.3.jar=lib\\pdftest-7.1.3.jar
+file.reference.sign-7.1.3-javadoc.jar=lib\\sign-7.1.3-javadoc.jar
+file.reference.sign-7.1.3-sources.jar=lib\\sign-7.1.3-sources.jar
+file.reference.sign-7.1.3.jar=lib\\sign-7.1.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +71,33 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
     ${file.reference.jbcrypt-0.4.jar}:\
-    ${file.reference.json-20250517.jar}
+    ${file.reference.json-20250517.jar}:\
+    ${file.reference.barcodes-7.1.3-javadoc.jar}:\
+    ${file.reference.barcodes-7.1.3-sources.jar}:\
+    ${file.reference.barcodes-7.1.3.jar}:\
+    ${file.reference.font-asian-7.1.3.jar}:\
+    ${file.reference.forms-7.1.3-javadoc.jar}:\
+    ${file.reference.forms-7.1.3-sources.jar}:\
+    ${file.reference.forms-7.1.3.jar}:\
+    ${file.reference.hyph-7.1.3.jar}:\
+    ${file.reference.io-7.1.3-javadoc.jar}:\
+    ${file.reference.io-7.1.3-sources.jar}:\
+    ${file.reference.io-7.1.3.jar}:\
+    ${file.reference.kernel-7.1.3-javadoc.jar}:\
+    ${file.reference.kernel-7.1.3-sources.jar}:\
+    ${file.reference.kernel-7.1.3.jar}:\
+    ${file.reference.layout-7.1.3-javadoc.jar}:\
+    ${file.reference.layout-7.1.3-sources.jar}:\
+    ${file.reference.layout-7.1.3.jar}:\
+    ${file.reference.pdfa-7.1.3-javadoc.jar}:\
+    ${file.reference.pdfa-7.1.3-sources.jar}:\
+    ${file.reference.pdfa-7.1.3.jar}:\
+    ${file.reference.pdftest-7.1.3-javadoc.jar}:\
+    ${file.reference.pdftest-7.1.3-sources.jar}:\
+    ${file.reference.pdftest-7.1.3.jar}:\
+    ${file.reference.sign-7.1.3-javadoc.jar}:\
+    ${file.reference.sign-7.1.3-sources.jar}:\
+    ${file.reference.sign-7.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
