--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\alexa\\AppData\\Roaming\\NetBeans\\24\\config\\GlassFishEE6\\Properties\\gfv3-1858890109.properties
+deploy.ant.properties.file=/home/gekki/.netbeans/25/config/GlassFishEE6/Properties/gfv31589009575.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/alexa/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/alexa/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\alexa\\GlassFish_Server\\glassfish;C:\\Users\\alexa\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv800ee11:localhost:4848
-j2ee.server.middleware=C:/Users/alexa/GlassFish_Server
+j2ee.server.domain=/home/gekki/GlassFish_Server/glassfish/domains/domain
+j2ee.server.home=/home/gekki/GlassFish_Server/glassfish
+j2ee.server.instance=[/home/gekki/GlassFish_Server/glassfish:/home/gekki/GlassFish_Server/glassfish/domains/domain]deployer:gfv800ee11:localhost:4848
+j2ee.server.middleware=/home/gekki/GlassFish_Server
+javac.debug=true
+javadoc.preview=true
 selected.browser=Chromium
 user.properties.file=/home/gekki/.netbeans/25/build.properties
