--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,6 +55,8 @@ file.reference.pdftest-7.1.3.jar=lib\\pdftest-7.1.3.jar
 file.reference.sign-7.1.3-javadoc.jar=lib\\sign-7.1.3-javadoc.jar
 file.reference.sign-7.1.3-sources.jar=lib\\sign-7.1.3-sources.jar
 file.reference.sign-7.1.3.jar=lib\\sign-7.1.3.jar
+file.reference.slf4j-simple-1.7.25.jar=lib\\slf4j-simple-1.7.25.jar
+file.reference.slf4j.api-1.6.1.jar=lib\\slf4j.api-1.6.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -97,7 +99,9 @@ javac.classpath=\
     ${file.reference.pdftest-7.1.3.jar}:\
     ${file.reference.sign-7.1.3-javadoc.jar}:\
     ${file.reference.sign-7.1.3-sources.jar}:\
-    ${file.reference.sign-7.1.3.jar}
+    ${file.reference.sign-7.1.3.jar}:\
+    ${file.reference.slf4j-simple-1.7.25.jar}:\
+    ${file.reference.slf4j.api-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
