Função de cálculo de acertos/erros funcionando

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,4 @@ j2ee.server.middleware=C:/Users/alexa/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chromium
-user.properties.file=/home/gekki/.netbeans/25/build.properties
+user.properties.file=C:\\Users\\alexa\\AppData\\Roaming\\NetBeans\\24\\build.properties
