--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ excludes=
 file.reference.barcodes-7.1.3-javadoc.jar=lib\\barcodes-7.1.3-javadoc.jar
 file.reference.barcodes-7.1.3-sources.jar=lib\\barcodes-7.1.3-sources.jar
 file.reference.barcodes-7.1.3.jar=lib\\barcodes-7.1.3.jar
-file.reference.font-asian-7.1.3.jar=lib\\font-asian-7.1.3.jar
+file.reference.commons-text-1.9.jar=lib\\commons-text-1.9.jar
 file.reference.forms-7.1.3-javadoc.jar=lib\\forms-7.1.3-javadoc.jar
 file.reference.forms-7.1.3-sources.jar=lib\\forms-7.1.3-sources.jar
 file.reference.forms-7.1.3.jar=lib\\forms-7.1.3.jar
@@ -79,7 +79,6 @@ javac.classpath=\
     ${file.reference.barcodes-7.1.3-javadoc.jar}:\
     ${file.reference.barcodes-7.1.3-sources.jar}:\
     ${file.reference.barcodes-7.1.3.jar}:\
-    ${file.reference.font-asian-7.1.3.jar}:\
     ${file.reference.forms-7.1.3-javadoc.jar}:\
     ${file.reference.forms-7.1.3-sources.jar}:\
     ${file.reference.forms-7.1.3.jar}:\
@@ -103,7 +102,8 @@ javac.classpath=\
     ${file.reference.sign-7.1.3-sources.jar}:\
     ${file.reference.sign-7.1.3.jar}:\
     ${file.reference.slf4j-simple-1.7.25.jar}:\
-    ${file.reference.slf4j.api-1.6.1.jar}
+    ${file.reference.slf4j.api-1.6.1.jar}:\
+    ${file.reference.commons-text-1.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
