--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ Thumbs.db
 src/java/util/APICredential.java
 src/java/util/APICredential.java
 src/java/util/DBCredentials.java
+src/java/util/credentials/APICredential.java
+src/java/util/credentials/APICredential.java
