--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[C:\\Users\\alexa\\GlassFish_Server\\glassfish;C:\\Users\\a
 j2ee.server.middleware=C:/Users/alexa/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chromium
+selected.browser=default
 user.properties.file=C:\\Users\\alexa\\AppData\\Roaming\\NetBeans\\24\\build.properties
